fix overflow of projects

--- a/src/pages/project/projects.css
+++ b/src/pages/project/projects.css
@@ -1,6 +1,8 @@
 .projects-container {
     padding: 20px;
     width: 100%;
+    height: 100%;
+    overflow-y: scroll;
     /* max-width: 800px; */
     /* margin: 0 auto; */
 }
